# testresults

./: .gitignore  README.md  sample.xml  testResults.cabal
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/doc/testResults-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  xml-1.3.14-AKug8Ud7K0VEhc87tBwsGy
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/lib/x86_64-osx-ghc-8.0.2/testResults-0.1.0.0-7TYFrrF6jiYHWiuvmXG8vd/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/pkgdb/: package.cache  testResults-0.1.0.0-7TYFrrF6jiYHWiuvmXG8vd.conf
src/: Errors.hs  Lib.hs  Types.hs
