name:                testResults
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/munk/testResults#readme
license:             BSD3
license-file:        LICENSE
author:              Munk
maintainer:          munk@protonmail.com
copyright:           2017
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , xml >= 1.3.14
  default-language:    Haskell2010

executable testResults-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , testResults
  default-language:    Haskell2010

test-suite testResults-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , testResults
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/munk/testResults
